[package]
name = "bili-api"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "crates/make-serde"]
resolver = "3"

[features]
summon_qrcode = ["image", "qrcode"]

[dependencies]
serde = "1.0.228"
thiserror = "2.0.17"
serde_json = "1.0.146"
serde_urlencoded = "0.7.1"
md-5 = "0.10.6"

[dependencies.image]
version = "0.25.9"
optional = true

[dependencies.qrcode]
version = "0.14.1"
optional = true

[dependencies.reqwest]
version = "0.12.28"
features = ["cookies", "json"]


[dependencies.make-serde]
path = "crates/make-serde"